<resources>
    <string name="app_name">智慧家居</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="sign_or_reg">注册/登录</string>
    <string name="action_reg">注册</string>
    <string name="action_login">登录</string>
    <string name="welcome">欢迎！</string>
    <string name="title_activity_main">智慧家居</string>
    <string name="title_home">家</string>

    <string name="title_user_mode">用户模式</string>
    <string name="title_local_mode">本地模式</string>

    <string name="title_dashboard">仪表盘</string>
    <string name="title_notifications">通知</string>
    <string name="MyRoom">我的房间</string>
    <string name="MyDevice">我的设备</string>
    <string name="addDevice">添加设备</string>
    <string name="smartLight">智能灯</string>
    <string name="getStarted">开始使用</string>
    <string name="title_activity_device_detail">设备详情</string>
    <!-- Strings used for fragments for navigation -->

    <string name="no_account_reg"><u>没有账号？注册</u></string>
    <string name="have_account_log"><u>已有账号？登录</u></string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="pinHint">请输入 pin 码</string>
    <string name="connect">连接</string>
    <string name="title_activity_channel_control">设备管理</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="log_lookup">操作日志查看</string>
    <string name="mqtt_channel">mqtt 通道</string>
    <string name="zigbee_channel">zigbee 通道</string>
    <string name="speaker_channel">speaker 通道</string>
    <string name="connection_fail">连接失败</string>
    <string name="net_error">网络错误</string>
    <string name="color_set_success">颜色设置成功</string>
    <string name="color_set_fail">颜色设置失败</string>
    <string name="apply_process_message">是否同意该申请？</string>
    <string name="apply_process_title">申请处理</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="language_switch">语言切换</string>
    <string name="my_account">我的</string>
    <string name="Success">成功</string>
    <string name="Fail">失败</string>
    <string name="notification">通知消息</string>
    <string name="bind_success">绑定成功！</string>
    <string name="bind_failed_pin">绑定失败，pin未找到</string>
    <string name="bind_failed_IP">绑定失败，IP未找到</string>
    <string name="bind_already">该设备已经绑定过了</string>
    <string name="get_status">获取状态</string>
    <string name="inexists">不存在</string>
    <string name="exists_already">已存在</string>
    <string name="login_failed">登录失败，密码错误或用户名不存在</string>
    <string name="reg_failed">注册失败，用户已存在</string>
    <string name="reg_success">注册成功，请继续登录</string>
    <string name="login_success">登录成功，欢迎!</string>
    <string name="tokenControl">授权管理</string>
    <string name="R0_lightstatus_read">读取开关</string>
    <string name="R1_lightstatus_write">写入开关</string>
    <string name="R2_lightbrightness_read">读取亮度</string>
    <string name="R3_lightbrightness_write">写入亮度</string>
    <string name="R4_lightcolor_read">读取颜色</string>
    <string name="R5_lightcolor_write">写入颜色</string>
    <string name="delToken_tip">该用户拥有以下权限，点击以取消授权</string>
    <string name="getstatus_fail">获取状态失败，可能没有权限</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>